--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-12">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                    <div class="row mainSpeakersList">
+                        <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div data-tilt class="thumb">
+                                <div data-tilt class="thumb" style="text-align: center;">
                                     <a href="./performer.html">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                             src="img/Speaker Photos/Anita Pratp.jpg" alt="">
@@ -253,7 +253,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -300,7 +300,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -321,7 +321,7 @@
                             </div>
                         </div> -->
 
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -344,7 +344,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -365,7 +365,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                        <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -427,7 +427,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-12">
-                    <div class="row">
+                    <div class="row mainSpeakersList">
                         
                         <div class="col-lg-3 col-md-6 col-9" >
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
@@ -450,7 +450,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-9" >
+                        <div class="col-lg-3 col-md-6 col-9"  >
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -483,7 +483,7 @@
 
     <!-- speaker area end -->
 
-    <div id="sponsors" class="brand_area black_bg">
+    <!-- <div id="sponsors" class="brand_area black_bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -496,7 +496,7 @@
                 <div class="col-lg-12">
                     <div class="brand_wrap">
                         <div class="brand_active owl-carousel">
-                            <!-- <div class="single_brand text-center">
+                            <div class="single_brand text-center">
                                 <img src="img/brand/1.png" alt="">
                             </div>
                             <div class="single_brand text-center">
@@ -516,13 +516,13 @@
                             </div>
                             <div class="single_brand text-center">
                                 <img src="img/brand/2.png" alt="">
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="team" class="brand_area black_bg">
         <div class="container">
