--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"> Theme: Prosper.Sapience:</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Theme: Prosper.Sapience</h3>
                         <p id="about1" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">“Prosperity is a mindset. It is our expectation and quest for
                             it.”
