--- a/register.html
+++ b/register.html
@@ -89,12 +89,12 @@
         <div class="container">
 
             <div id="faqArea" class="row">
-                <div class="section_title mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 50px;">FAQ
+                <div class="section_title mb-80 regHeading">
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">FAQ
                         & TERMS AND CONDITIONS</h3>
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
+                    <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
                         SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
-                        PURCHASE OPTION</h3>
+                        PURCHASE OPTION</h4>
                     <ul>
                         <li style="margin: 2%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
@@ -181,7 +181,7 @@
                             </p>
                         </li>
                     </ul>
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 50px;">
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >
                         TERMS AND CONDITIONS</h3>
                     <ol id="termsAndConditions">
                         <li>
