--- a/about.html
+++ b/about.html
@@ -113,7 +113,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3>
+                        <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3> -->
+                        <img src="./img/TED LOGO.png" style=" object-fit: cover; max-width: 350px; max-height: 200px; padding-left: 100px; margin-left: auto; margin-right: auto;">
                         <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">TED is a
                             nonprofit
@@ -128,7 +129,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
+                        <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3> -->
+                        <img src="./img/TEDX LOGO.png" style=" object-fit: cover; max-width: 350px; max-height: 120px; margin-left: auto; margin-right: auto;">
                         <p id="about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">TED is a
                             global
@@ -143,7 +145,9 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3>
+                        <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3> -->
+                        <img src="./img/TEDX TKMCE LOGO .png" style=" object-fit: cover; max-width: 350px; max-height: 200px; margin-left: auto; margin-right: auto;">
+
                         <p id="about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">At its
                             premier edition in
