--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                             <div class="col-xl-3 col-lg-3">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/tedxtkmce.jpeg"
+                                        <img src="img/TEDX TKMCE LOGO .png"
                                             style="width:230px; height:50px; object-fit: cover">
                                     </a>
                                 </div>
@@ -56,7 +56,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="#">About</a></li>
                                             <li><a href="performer.html">Speakers</a></li>
-                                            <li><a href="sponsors.html">Sponsers</a></li>
+                                            <li><a href="sponsors.html">Sponsors</a></li>
                                             <li><a href="index.html#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="index.html#contact">Contact</a></li>
@@ -114,8 +114,8 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3> -->
-                        <img src="./img/TED LOGO.png" style=" object-fit: cover; max-width: 350px; max-height: 200px; padding-left: 100px; margin-left: auto; margin-right: auto;">
-                        <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                        <img src="./img/TED LOGO.png" style=" object-fit: cover; max-width: 350px; margin-top: -15%; max-height: 200px; padding-left: 100px; margin-left: auto; margin-right: auto;">
+                        <p id="about2" style="margin-top: -6%;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">TED is a
                             nonprofit
                             devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
