--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3> -->
-                        <img src="./img/TED LOGO.png" style=" object-fit: cover; max-width: 350px; max-height: 200px; padding-left: 100px; margin-left: auto; margin-right: auto;">
+                        <img src="./img/TED LOGO.png" style=" object-fit: cover; max-width: 350px; max-height: 200px; margin-top: -15%; padding-left: 100px; margin-left: auto; margin-right: auto;">
 
-                        <p id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
+                        <p style="margin-top: -6%;" id="about2" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                             style="text-align: justify;">TED is a
                             nonprofit
                             devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
