--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
                             <div class="col-xl-3 col-lg-3">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/tedxtkmce.jpeg"
+                                        <img src="img/TEDX TKMCE LOGO .png"
                                             style="width:230px; height:50px; object-fit: cover">
                                     </a>
                                 </div>
@@ -56,7 +56,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="performer.html">About</a></li>
                                             <li><a href="speakers.html">Speakers</a></li>
-                                            <li><a href="sponsors.html">Sponsers</a></li>
+                                            <li><a href="sponsors.html">Sponsors</a></li>
                                             <li><a href="team.html">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="contact.html">Contact</a></li>
