--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="overlay">
 
     <!-- header-start -->
     <header>
@@ -87,8 +87,8 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex  slider_bg_1 overlay">
-            <div class="container">
+        <div class="single_slider  d-flex slider_bg_1 overlay" style="background-size: contain; background-attachment: fixed;">
+            <div class="container  ">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-12">
                         <div class="slider_text text-center">
@@ -139,7 +139,7 @@
     </div>
     </div>
     <!-- slider_area_end -->
-    <div class="overlay">
+    <div >
         <!-- about_area_start  -->
         <div id="about" class="about_area black_bg mt-3">
             <div class="container">
