--- a/performer.html
+++ b/performer.html
@@ -755,7 +755,7 @@
         // $('#p3').hide();
         $('#p4').hide();
         // $('#p5').hide();
-        $('#p6').hide();
+        // $('#p6').hide();
         // $('#p7').hide();
         //$('#p8').hide();
         //$('#p9').hide();
