--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex slider_bg_1 overlay" style="background-size: contain; background-attachment: fixed;">
+        <div class="single_slider  d-flex slider_bg_1 overlay" style="background-size: cover; background-position: top; background-attachment: fixed;">
             <div class="container  ">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-12">
@@ -170,67 +170,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section_title text-center mb-80">
-                            <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TED</h3> -->
-                            <img src="./img/TED LOGO.png"
-                                style=" object-fit: cover; max-width: 350px; max-height: 200px; margin-top: -15%; padding-left: 100px; margin-left: auto; margin-right: auto;">
-
-                            <p style="margin-top: -6%;" id="about2" class="wow fadeInRight" data-wow-duration="1s"
-                                data-wow-delay=".4s" style="text-align: justify;">TED is a
-                                nonprofit
-                                devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or
-                                less). TED began in 1984 as a conference where Technology, Entertainment and Design
-                                converged, and today covers almost all topics - from science to business to global
-                                issues -
-                                and is covered in most of the languages in the world. TED stands for one mission and
-                                that is: Spread ideas.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section_title text-center mb-80">
-                            <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3> -->
-                            <img src="./img/TEDX LOGO.png"
-                                style=" object-fit: cover; max-width: 350px; max-height: 120px; margin-left: auto; margin-right: auto;">
-                            <p id="about3" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="text-align: justify;">TED is a
-                                global
-                                community, welcoming those people from every discipline and culture that passionately
-                                believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED
-                                aims to build a clearinghouse of free knowledge from the world's most inspired thinkers
-                                and through that, bring forth a community of curious souls to engage with ideas and each
-                                other, both online and at TED and TEDx events around the world, all year long.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="section_title text-center mb-80">
-                            <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDxTKMCE</h3> -->
-                            <img src="./img/TEDX TKMCE LOGO .png"
-                                style=" object-fit: cover; max-width: 350px; max-height: 200px; margin-left: auto; margin-right: auto;">
-                            <p id="about4" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="text-align: justify;">At its
-                                premier edition in
-                                2018, with the theme of "Alchemy", TEDxTKMCE brought 8 illustrious speakers from across
-                                the world and from different stratas of society. Aiming to bust myths and unravel
-                                lustrous
-                                possibilities.
-                                . Following in its footsteps and unfazed by the greatest challenge our generation has
-                                faced till date, This year, We bring TEDxTKMCE Virtual.
-                                TEDx is a haven wherein thoughts are sown, ideas sprout and innovation thrives. Our
-                                mission
-                                is to use this virtuous dais to reach inward and exonerate the power within and truly
-                                bring
-                                out the best in our audience and make us a beacon of resilience in these difficult
-                                times.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+               
+                
             </div>
         </div>
         <!-- about_area_end  -->
@@ -361,7 +302,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-3 col-md-6 col-9">
+                            <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
@@ -381,7 +322,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
