--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <li><a href="performer.html">Speakers</a></li>
+                                            <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsors</a></li>
                                             <li><a href="#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
@@ -87,7 +87,8 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex slider_bg_1 overlay" style="background-size: cover; background-position: top; background-attachment: fixed;">
+        <div class="single_slider  d-flex slider_bg_1 overlay"
+            style="background-size: cover; background-position: top; background-attachment: fixed;">
             <div class="container  ">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-12">
@@ -139,7 +140,7 @@
     </div>
     </div>
     <!-- slider_area_end -->
-    <div >
+    <div>
         <!-- about_area_start  -->
         <div id="about" class="about_area black_bg mt-3">
             <div class="container">
@@ -170,8 +171,8 @@
                         </div>
                     </div>
                 </div>
-               
-                
+
+
             </div>
         </div>
         <!-- about_area_end  -->
@@ -192,7 +193,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb" style="text-align: center;">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Anita Pratp.jpg" alt="">
                                         </a>
@@ -214,7 +215,7 @@
                             <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="./performer.html">
+                                    <a href="./speakers.html">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                             src="img/Speaker Photos/Kiyosaki 2.jpg" alt="">
                                     </a>
@@ -237,7 +238,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
                                         </a>
@@ -261,7 +262,7 @@
                             <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
-                                    <a href="./performer.html">
+                                    <a href="./speakers.html">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                             src="img/Speaker Photos/Susmita.jpg" alt="">
                                     </a>
@@ -282,7 +283,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Ravichandran.jpg" alt="">
                                         </a>
@@ -303,30 +304,30 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-9">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                <div data-tilt class="thumb">
-                                    <a href="./performer.html">
-                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/Radha Gomaty .jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Radha Gomaty</h4>
-                                    <div>
-                                        <a style="color: aliceblue;" class="fa fa-twitter"></a>
-                                        <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
-                                            class="fa fa-facebook"></a>
-                                        <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
-                                        <a style="color: aliceblue;" class="fa fa-youtube"></a>
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <div data-tilt class="thumb">
+                                        <a href="./speakers.html">
+                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                                src="img/Speaker Photos/Radha Gomaty .jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="performer_heading">
+                                        <h4>Radha Gomaty</h4>
+                                        <div>
+                                            <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
+                                                class="fa fa-instagram"></a>
+                                            <a style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/sun.png" alt="">
                                         </a>
@@ -348,7 +349,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Dr. Madhusoodhanan .jpg" alt="">
                                         </a>
@@ -390,7 +391,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Raymi 2.jpg" alt="">
                                         </a>
@@ -411,7 +412,7 @@
                             <div class="col-lg-3 col-md-6 col-9">
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <div data-tilt class="thumb">
-                                        <a href="./performer.html">
+                                        <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
                                                 src="img/Speaker Photos/Jo Marshall.jpeg" alt="">
                                         </a>
@@ -695,9 +696,14 @@
                                         <div class="col-lg-6">
                                             <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Connect
                                                 with us</h3>
-                                            <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                                contact@tedxtkmce.in
-                                            </p>
+                                            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=contact@tedxtkmce.in"
+                                                target="_blank">
+                                                <p style="font-color: #ffffff" class="wow fadeInUp"
+                                                    data-wow-duration="1s" data-wow-delay=".5s">
+                                                    contact@tedxtkmce.in
+                                                </p>
+                                            </a>
+
 
                                         </div>
                                     </div>
