--- a/register.html
+++ b/register.html
@@ -54,12 +54,12 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="performer.html">About</a></li>
+                                            <li><a href="about.html">About</a></li>
                                             <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsors</a></li>
-                                            <li><a href="team.html">Team</a></li>
+                                            <li><a href="index.html#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="index.html#contact">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -95,72 +95,66 @@
                     <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
                         SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
                         PURCHASE OPTION</h4>
-                    <ul>
-                        <li style="margin: 2%;">
+                    <ul >
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● When and where is the event happening ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 The event is happening on the 22nd of November, 2020 from 9:00 AM IST to 3:00 PM
                                 IST and will be done virtually via Zoom platform.
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● How will the sessions be held ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 The event will be split up into two 2-hour sessions with a 30 minutes break in between.
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● How many speakers will be part of TEDxTKMCE ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 TEDxTKMCE will consist of 8 Speakers, 3 performers and an Interactive Guest
                                 Panel[separate from that of the Speakers].
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● What is the mode of execution for TEDxTKMCE 2020 ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 The talks from the speakers will all be pre recorded which will be followed by a
                                 15-20minute interactive session with the said speaker, the performances and
                                 interactive session panels will however be fully live.
 
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● Will all the Speakers have an interactive session with the attendees ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 Everyone part of the currently released line-up will participate in an interactive
                                 session.
                                 The availability of the rest of the speakers will be given as they are revealed in the
                                 coming days.
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● What is the price of the ticket ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 The price of the ticket is 300₹. Attendees that purchase the ticket will also be give a
                                 goodies bag which will contain a drawstring bag, notebook, keychain , pen and a thank
                                 you card. All of which are fully customized for TEDxTKMCE and will be shipped to the
@@ -169,13 +163,12 @@
 
                             </p>
                         </li>
-                        <li style="margin: 2%;">
+                        <li style="margin: 1%;">
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
                                 style="font-weight: bold">
                                 ● When will we receive the schedule and other details of the event ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s"
-                                style="font-size: large;">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                                 The detailed schedule and all other instructions pertaining to TEDxTKMCE 2020 will be
                                 sent to the Attendee once they have purchased a ticket of admission to the event.
                             </p>
@@ -183,7 +176,7 @@
                     </ul>
                     <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >
                         TERMS AND CONDITIONS</h3>
-                    <ol id="termsAndConditions">
+                    <ul id="termsAndConditions">
                         <li>
                             <p>
                                 1. Each Ticket you purchase from TEDxTKMCE 2020 is intended to give you a revocable
@@ -351,7 +344,7 @@
                                 tickets.
                             </p>
                         </li>
-                    </ol>
+                    </1l>
                     <input type="checkbox" id="agreement" name="agreement" value="agreed">
                     <label for="agreement">I have read the FAQ terms and conditions and agree to it</label><br>
                 </div>
