--- a/sponsors.html
+++ b/sponsors.html
@@ -55,7 +55,7 @@
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="#">About</a></li>
-                                            <li><a href="performer.html">Speakers</a></li>
+                                            <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsors</a></li>
                                             <li><a href="index.html#team">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
