--- a/index.html
+++ b/index.html
@@ -659,6 +659,28 @@
                         </div>
                     </div>
                 </div> -->
+                <div class="col-lg-3 col-md-6 col-6">
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
+                            class="card-img-top" src="./img/tedteam/Akash Vijayan.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white; text-align: center;">AKASH VIJAYAN</h5>
+                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-6">
+                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
+                            class="card-img-top" src="./img/tedteam/Vishnu manikantan.jpeg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white; text-align: center;">VISHNU MANIKANTAN</h5>
+                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
