--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- slider_area_start -->
     <div class="slider_area">
         <div class="single_slider  d-flex slider_bg_1 overlay"
-            style="background-size: cover; background-position: top; background-attachment: fixed;">
+            style="background-size: contain; background-position: top; background-attachment: fixed;">
             <div class="container  ">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-12">
